--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ matrix:
     - go: "1.8"
   allow_failures:
     - go: tip
+
+before_install:
+  - go get github.com/mattn/goveralls
+
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
